fixed margin in location on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,7 @@ body {
     display: none;
   }
   .weather__main .location__country {
+    margin-left: 0px;
     max-width: 240px;
     padding-top: 18px;
     padding-bottom: -18px;
