--- a/scss/components/_weather.scss
+++ b/scss/components/_weather.scss
@@ -151,6 +151,7 @@
         }
 
         &__country {
+          margin-left: 0px;
           max-width: 240px;
           padding-top: 18px;
           padding-bottom: -18px;
